--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
       - name: good bye
         run: echo "good bye"
         shell: bash
+      - name: create theme.zip if exist
+        run: 
+          zip -r theme.zip .
   
  
      
