--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Hello world
         run: echo "helo world"
         shell: bash
+        
+      - name: Remove theme.zip
+        uses: JesseTG/rm@v1.0.3
+        with:
+         path: ./theme.zip
 
   GoodBye:
     runs-on: ubuntu-latest
