--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           zip -r theme.zip . -i .
       - uses: actions/upload-artifact@v3
         with:
-          name: my-artifact
+          name: Themes
           path: ./theme.zip
   
  
