--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,9 @@ jobs:
       - name: good bye
         run: echo "good bye"
         shell: bash
-      - name: create theme.zip
-        run: 
-          zip -r theme.zip ./* 
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r theme.zip .
       - uses: actions/upload-artifact@v3
         with:
           name: Themes
