--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Remove theme.zip
         uses: JesseTG/rm@v1.0.3
         with:
-         path: ./theme.zip
+         path: theme.zip
 
   GoodBye:
     runs-on: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: Themes
-          path: ./theme.zip
+          path: theme.zip
   
  
      
