--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "good bye"
         shell: bash
       - name: Upload Release
-        uses: ncipollo/release-action@v1
+        uses: thedoctor0/zip-release@main
         with:
           type: 'zip'
           filename: 'release.zip'
