--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches:
       - main
+defaults: 
+  run:
+    shell: bash
 jobs:
   Hello:
     runs-on: ubuntu-latest
@@ -13,7 +16,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Hello world
         run: echo "helo world"
-        shell: bash
         
       - name: Remove theme.zip
         uses: JesseTG/rm@v1.0.3
@@ -27,8 +29,8 @@ jobs:
         run: echo "good bye"
         shell: bash
       - name: Upload Release
-        run: zip -r theme.zip github-Hero -i .
-        shell: bash
+        run: |
+          zip -r theme.zip . -x .*
           
  
      
