--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
       - name: Upload Release
         run: |
-          zip -r theme.zip ./ -x .*
+          cwd
           
  
      
