--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r theme.zip .
+          args: zip -qq -r theme.zip . -i .
           
  
      
