--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Remove theme.zip
       uses: JesseTG/rm@v1.0.3
       with:
-        path: githat-Hero/*
+        path: githat-Hero/test
         
         
   zip-repo:
@@ -26,7 +26,7 @@ jobs:
 
     steps:
     - name: Generate Zip file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
-        path: githat-Hero/*
+        path: githat-Hero/test
         if-no-files-found: error
