--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
     - uses: montudor/action-zip@v1
       with:
+       name: zipFile
        args: zip -qq -r dir.zip . -i test
 
 
