--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,21 +10,13 @@ jobs:
     timeout-minutes: 10
 
     steps:
-    - name: checkout repo
-      uses: actions/checkout@v3
-
-
-        
-        
-  zip-repo:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10 
-    needs: [deploy]
-
-    steps:
-    - uses: montudor/action-zip@v1
-      with:
-       name: zipFile
-       args: zip -qq -r dir.zip . -i test
+      - uses: actions/checkout@v1
+      - run: composer install --ansi --no-progress --no-interaction --prefer-dist
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r vendor.zip test
+      - uses: actions/upload-artifact@v2
+        with:
+          name: vendor.zip
 
 
