--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/checkout@v1
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r vendor.zip test
+          args: zip -qq -r test.zip test
       - uses: actions/upload-artifact@v2
         with:
-          name: vendor.zip
+          name: test.zip
+ 
 
 
