--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,12 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v1
-      - uses: montudor/action-zip@v1
-        with:
-          args: zip -qq -r test.zip test
-      - uses: actions/upload-artifact@v2
-        with:
-          name: test.zip
+      - name: run commands
+        uses: |
+          echo hi
+      
+    
+      
  
 
 
