--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,10 @@ jobs:
 
     steps:
       - name: run commands
-        uses: |
-          echo hi
+        run: |
+            echo "::group::My title"
+            echo "Inside group"
+            echo "::endgroup::
       
     
       
