--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,7 @@ jobs:
     steps:
       - name: run commands
         run: |
-            echo "::group::My title"
-            echo "Inside group"
-            echo "::endgroup::
+          pwd
       
     
       
