--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,28 @@
-name: wordpress deploy
+name: Build release zip
 
 on:
   push:
     branches:
-      - main
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+    - main
 
+jobs:
+  build:
+    name: Build release zip
+    runs-on: ubuntu-latest
     steps:
-      - name: run commands
-        run: |
-          pwd
-          zip -r myarchive.zip . -i .
-          cd test
-          ls -a
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Build plugin # Remove or modify this step as needed
+      run: |
+        composer install --no-dev
+        npm install
+        npm run build
+
+    - name: Generate zip
+      uses: 10up/action-wordpress-plugin-build-zip@stable
+      env:
+        SLUG: my-super-cool-plugin
       
     
       
